crates/rstest-bdd/tests/fixtures_macros/scenario_harness_invalid.stderr
error[E0277]: the trait bound `NotAHarness: HarnessAdapter` is not satisfied
  --> tests/fixtures_macros/scenario_harness_invalid.rs:17:15
   |
17 |     harness = NotAHarness,
   |               ^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `HarnessAdapter` is not implemented for `NotAHarness`
  --> tests/fixtures_macros/scenario_harness_invalid.rs:4:1
   |
 4 | struct NotAHarness;
   | ^^^^^^^^^^^^^^^^^^
help: the trait `HarnessAdapter` is implemented for `StdHarness`
  --> $WORKSPACE/crates/rstest-bdd-harness/src/std_harness.rs
   |
   | impl HarnessAdapter for StdHarness {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `__assert_harness`
  --> tests/fixtures_macros/scenario_harness_invalid.rs:15:1
   |
15 | / #[scenario(
16 | |     path = "basic.feature",
17 | |     harness = NotAHarness,
18 | | )]
   | |__^ required by this bound in `__assert_harness`
   = note: this error originates in the attribute macro `scenario` (in Nightly builds, run with -Z macro-backtrace for more info)
